# echo-core

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.claude/commands/: finish.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-review.yml
benches/: cpu_bench.rs
docs/: debugging-guide.md  setup.md  testing-strategy.md
docs/01-design/: cpu-design.md  gpu-design.md  memory-design.md
docs/02-implementation/: coding-standards.md
docs/05-development/: roadmap.md  setup.md
docs/user-guide/: running-emulator.md
src/: lib.rs
src/core/: audio.rs  error.rs  loader.rs  mod.rs  save_state.rs  system.rs  timing.rs
src/core/cdrom/: cd_audio.rs  commands.rs  disc.rs  mod.rs  tests.rs
src/core/cdrom/tests/: basic.rs  cd_audio.rs  commands.rs  disc.rs  mod.rs  timing.rs
src/core/controller/: mod.rs
src/core/controller/tests/: basic.rs  input.rs  mod.rs  serial.rs
src/core/cpu/: cop0.rs  decode.rs  disassembler.rs  icache.rs  instructions.rs  mod.rs  tests.rs  tracer.rs
src/core/cpu/instructions/: arithmetic.rs  branch.rs  cop0.rs  cop2.rs  exception.rs  jump.rs  (+6 more)
src/core/dma/: mod.rs  tests.rs
src/core/gpu/: mod.rs  primitives.rs  registers.rs  tests.rs  types.rs
src/core/gte/: mod.rs
src/core/interrupt/: mod.rs
src/core/memory/: cache.rs  io_device.rs  io_ports.rs  mod.rs  region.rs  tests.rs
src/core/spu/: adpcm.rs  adsr.rs  mod.rs  noise.rs  registers.rs  reverb.rs  tests.rs  voice.rs
src/core/system/: controller_ports.rs  mod.rs
src/core/timer/: mod.rs
src/frontend/: mod.rs
tests/: bios_boot.rs  compatibility.rs  integration_test.rs  system.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs  test_roms.rs
tests/system/: initialization.rs
ui/: main.slint
xtask/: Cargo.toml
xtask/src/: main.rs
(+72 files in other folders)
