[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "psrx"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
authors = ["itsakeyfut"]
description = "A PlayStation (PSX) emulator written in Rust"
license = "Apache-2.0"
repository = "https://github.com/itsakeyfut/psrx"

[dependencies]
# Error handling
thiserror = "2.0.17"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Environment configuration
dotenvy = "0.15.7"

# Command line argument parsing
clap = { version = "4.5.51", features = ["derive"] }

# Serialization (for save states, config)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Bitwise operations
bitflags = "2.10"

# UI framework
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

[dev-dependencies]
# Testing
criterion = "0.7"
proptest = "1.9"
tempfile = "3.23"

[[bench]]
name = "cpu_bench"
harness = false

[profile.dev]
opt-level = 1  # Some optimization for better dev experience

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
